# nu_plugin_image

./: .gitignore  Cargo.toml  README.md  build.nu  nupm.nuon  package.nuon  post_setup.nu  test.ansi
.github/workflows/: dependency-update.yaml  publish.yml
resources/ttf-iosevka-term-7.2.6/: .gitattributes
scripts/: theme_exporter.nu
src/: lib.rs  main.rs
src/ansi_to_image/: ansi_to_image.rs  color.rs  escape.rs  escape_parser.rs  font_family.rs  fonts.rs  internal_scale.rs  main.rs  mod.rs  new_escape_parser.rs  nu_plugin.rs  opt.rs  palette.rs  pallete.rs  printer.rs
src/image_to_ansi/: core.rs  lib.rs  mod.rs  nu_plugin.rs
src/image_to_ansi/writer/: block.rs  lib.rs  mod.rs  string_writer.rs
src/logging/: logger.rs  logger_state.rs  macros.rs  mod.rs  runtime_filter.rs
