[dependencies]
termcolor = "1.1"
ansi_colours = "1.0"
crossterm = "0.27"
image = "0.24.7"
imageproc = "0.23"
include-flate = "0.3"
rusttype = "0.9"
vte = "0.13"
lazy_static = "1.4.0"

[dependencies.clap]
features = ["derive"]
version = "4"

[dependencies.nu-plugin]
version = "0.93.0"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.93.0"

[features]
all-fonts = ["font-iosevka_term", "font-anonymous_pro", "font-ubuntu"]
default = []
font-anonymous_pro = []
font-iosevka_term = []
font-ubuntu = []

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to open png images in the shell and save ansi string as images (like tables or ...)"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_image"
keywords = ["nushell", "image", "render", "plugin"]
license = "MIT"
name = "nu_plugin_image"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_image"
version = "0.5.0"
