[dependencies]
slog = "2.7.0"
termcolor = "1.4.1"
ansi_colours = "1.2.3"
crossterm = "0.29.0"
image = "0.25.6"
imageproc = "0.25.0"
include-flate = "0.3.0"
ab_glyph = "0.2.29"
vte = "0.15.0"
lazy_static = "1.5.0"
slog-term = "2.9.1"
slog-async = "2.8.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.40"

[dependencies.nu-plugin]
version = "0.105.1"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.105.1"

[features]
all-fonts = ["font-iosevka_term", "font-anonymous_pro", "font-ubuntu"]
default = []
font-anonymous_pro = []
font-iosevka_term = []
font-ubuntu = []

with-debug = ["slog/max_level_debug", "slog/release_max_level_debug"]
with-trace = ["slog/max_level_trace", "slog/release_max_level_trace"]

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to open png images in the shell and save ansi string as images (like tables or ...)"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_image"
keywords = ["nushell", "image", "render", "plugin"]
license = "MIT"
name = "nu_plugin_image"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_image"
version = "0.105.1"
